# services/admin/internal/infrastructure/analytics/analytics.go
@@ -1,23 +1,35 @@
 package analytics
 
 import (
+	"bytes"
 	"context"
+	"fmt"
+	"log/slog"
+	"time"
 
 	"github.com/M2IE/Interactive-onboarding/pkg/database"
+	"github.com/M2IE/Interactive-onboarding/pkg/pdfengine"
+	"github.com/M2IE/Interactive-onboarding/pkg/s3"
 	"github.com/M2IE/Interactive-onboarding/services/admin/internal/domain"
 	"github.com/M2IE/Interactive-onboarding/services/admin/queries"
 	"github.com/google/uuid"
 )
 
 type AnalyticsInfrastructure struct {
-	q  *queries.Query
-	db database.Querier
+	q              *queries.Query
+	db             database.Querier
+	s3             s3.Client
+	pdf            pdfengine.Engine
+	s3ReportBucket string
 }
 
-func NewAnalyticsInfrastructure(db database.Querier, q *queries.Query) *AnalyticsInfrastructure {
+func NewAnalyticsInfrastructure(db database.Querier, q *queries.Query, s3 s3.Client, pdf pdfengine.Engine, s3ReportBucket string) *AnalyticsInfrastructure {
 	return &AnalyticsInfrastructure{
-		q:  q,
-		db: db,
+		q:              q,
+		db:             db,
+		s3:             s3,
+		pdf:            pdf,
+		s3ReportBucket: s3ReportBucket,
 	}
 }
 
@@ -42,4 +54,19 @@ func (a *AnalyticsInfrastructure) querier(db database.Querier) database.Querier 
 		return db
 	}
 	return a.db
+}
+
+func (a *AnalyticsInfrastructure) UploadAnalytics(ctx context.Context, scenarioID uuid.UUID, analytics *domain.Analytics) (string, error) {
+	pdfBytes, err := a.pdf.GeneratePDF(ctx, ToPDFContent(analytics))
+	if err != nil {
+		return "", fmt.Errorf("Error in PDF generateion: %w", err)
+	}
+
+	key := fmt.Sprintf("%s_%s.pdf", scenarioID.String(), time.Now())
+	if err := a.s3.Upload(ctx, a.s3ReportBucket, key, bytes.NewReader(pdfBytes), "application/pdf"); err != nil {
+		slog.Error("failed to upload report to s3", "error", err)
+		return "", fmt.Errorf("upload report: %w", err)
+	}
+
+	return key, nil
 }
